creditas-sf/force-app/main/default/objects/User/fields/LastAttendance__c.field-meta.xml
<CustomField>
    <fullName>LastAttendance__c</fullName>
    <description>Campo que vai registrar quando o usuário finalizou o último atendimento.</description>
    <label>Último Atendimento</label>
    <type>DateTime</type>
</CustomField>