creditas-sf/force-app/main/default/objects/User/fields/UserAvailable__c.field-meta.xml
<CustomField>
    <fullName>UserAvailable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Usuário Disponível</label>
    <type>Checkbox</type>
</CustomField>